Task 26:Consommation API avec Axios index+modifier+ajouter+supprimer+consulter paiement(Interface vehicule)
